# gipfel

./: .hgignore  ChangeLog  Makefile.am  NEWS  README  configure.ac  gipfel.spec
data/: all.txt  bay_voralpen.txt  karwendel.txt
examples/: Makefile  gipfel2html
src/: DataImage.H  DataImage.cxx  EXIFImageMetaData.H  ExifImageMetaData.H  ExifImageMetaData.cxx  Fl_Search_Chooser.H  Fl_Search_Chooser.cxx  Fl_Value_Dial.H  Fl_Value_Dial.cxx  GipfelWidget.H  GipfelWidget.cxx  Hill.H  Hill.cxx  ImageMetaData.H  ImageMetaData.cxx  JPEGOutputImage.H  JPEGOutputImage.cxx  JpgcomImageMetaData.H  JpgcomImageMetaData.cxx  Makefile  Makefile.am  Makefile.lsq_funcs  OutputImage.H  OutputImage.cxx  Panorama.H  Panorama.cxx  PreviewOutputImage.H  PreviewOutputImage.cxx  Projection.H  Projection.cxx  ProjectionCylindrical.H  ProjectionCylindrical.cxx  ProjectionLSQ.H  ProjectionLSQ.cxx  ProjectionRectilinear.H  ProjectionRectilinear.cxx  ProjectionSphaeric.H  ProjectionSphaeric.cxx  ProjectionTangential.H  ProjectionTangential.cxx  (+25 more)
