bin_PROGRAMS = gipfel

gipfel_SOURCES = \
	gipfel.cxx \
	util.c \
	GipfelWidget.cxx \
	Panorama.cxx \
	Projection.cxx \
	ProjectionTangential.cxx \
	ProjectionSphaeric.cxx \
	Hill.cxx \
	Fl_Value_Dial.cxx \
	Fl_Search_Chooser.cxx

noinst_HEADERS = \
	GipfelWidget.H \
	Panorama.H \
	Projection.H \
	ProjectionTangential.H \
	ProjectionSphaeric.H \
	Hill.H \
	Fl_Value_Dial.H \
	Fl_Search_Chooser.H \
	util.h
