bin_PROGRAMS = gipfel

gipfel_SOURCES = \
	gipfel.cxx \
	util.c \
	GipfelWidget.cxx \
	Panorama.cxx \
	Projection.cxx \
	ProjectionTangential.cxx \
	ProjectionSphaeric.cxx \
	Hill.cxx \
	Fl_Value_Dial.cxx \
	Fl_Search_Chooser.cxx \
	choose_hill.cxx \
	Stitch.cxx \
	OutputImage.cxx \
	JPEGOutputImage.cxx \
	TIFFOutputImage.cxx \
	PreviewOutputImage.cxx 
	ImageMetaData.cxx \
	JpgcomImageMetaData.cxx \
	ExifImageMetaData.cxx

noinst_HEADERS = \
	GipfelWidget.H \
	Panorama.H \
	Projection.H \
	ProjectionTangential.H \
	ProjectionSphaeric.H \
	Hill.H \
	ViewParams.H \
	Fl_Value_Dial.H \
	Fl_Search_Chooser.H \
	choose_hill.H \
	Stitch.H \
	OutputImage.H \
	JPEGOutputImage.H \
	TIFFOutputImage.H \
	PreviewOutputImage.H \
	ImageMetaData.H \
	JpgcomImageMetaData.H \
	ExifImageMetaData.H \
	util.h
