bin_PROGRAMS = gipfel

gipfel_SOURCES = \
	gipfel.cxx \
	util.c \
	strsep.c \
	GipfelWidget.cxx \
	Panorama.cxx \
	ProjectionLSQ.cxx \
	ProjectionRectilinear.cxx \
	ProjectionCylindrical.cxx \
	Hill.cxx \
	Fl_Value_Dial.cxx \
	Fl_Search_Chooser.cxx \
	choose_hill.cxx \
	Stitch.cxx \
	OutputImage.cxx \
	JPEGOutputImage.cxx \
	TIFFOutputImage.cxx \
	PreviewOutputImage.cxx \
	ImageMetaData.cxx \
	ScreenDump.cxx

noinst_HEADERS = \
	GipfelWidget.H \
	Panorama.H \
	ProjectionLSQ.H \
	ProjectionRectilinear.H \
	ProjectionRectilinear_funcs.cxx \
	ProjectionCylindrical.H \
	ProjectionCylindrical_funcs.cxx \
	Hill.H \
	ViewParams.H \
	Fl_Value_Dial.H \
	Fl_Search_Chooser.H \
	choose_hill.H \
	Stitch.H \
	OutputImage.H \
	JPEGOutputImage.H \
	TIFFOutputImage.H \
	PreviewOutputImage.H \
	ImageMetaData.H \
	ScreenDump.H \
	util.h \
	strsep.h
